# SyncWithMe

./: CMakeLists.txt  README.md
Client/include/: Client.hpp  FileUpdater.hpp  Queue.hpp
Client/include/File/: File.hpp  FileHasher.hpp
Client/include/Request/: Request.hpp
Client/include/Response/: Response.hpp
Client/src/: Client.cpp  FileUpdater.cpp  Queue.cpp  main.cpp
Client/src/File/: File.cpp  FileHasher.cpp
Client/src/Request/: Request.cpp
Client/src/Response/: Response.cpp
